# quippy_agent

./: .gitignore  cdk.json  deploy.sh  package-lock.json  package.json  pyproject.toml
lambda/: app_agent_knowledge_items.py
lib/: action-group.yaml  quippy_cdk_agent-stack.ts
lib/constructs/: bedrock-agent-dynamodb-construct.ts  bedrock-agent-lambda-construct.ts
test/: quippy_cdk_agent.test.ts
