[tool.poetry]
name = "lambda"
version = "0.1.0"
description = "Lambdas required by the agent"
authors = ["Jettro Coenradie <jettro@coenradie.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
boto3 = "^1.35.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
